# sure-shot-static

./: .editorconfig  .gitignore  README.rst  pyproject.toml  s3ync.py
