[tool.poetry]
name = "sure-shot-static"
version = "0.1.0"
description = ""
authors = ["doubleO8 <wb008@hdm-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.21"
python-magic = "^0.4.22"
Brotli = "^1.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
